<?xml version="1.0" encoding="utf-8"?>
<!--
     author : Ross Crawford
     matriculation no. : S1821950
     university : Glasgow Caledonian University
     module : Mobile Platform Development
-->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/action_date"
        android:title="@string/date"
        android:icon="@drawable/calendar"
        app:showAsAction="always|collapseActionView" />

</menu>