<!--
     author : Ross Crawford
     matriculation no. : S1821950
     university : Glasgow Caledonian University
     module : Mobile Platform Development
-->
<resources>
    <string name="app_name">MPD Traffic Scotland</string>
    <string name="current_incidents">Current Incidents</string>
    <string name="current_incidents_desc">Current incidents on the road network e.g. accidents</string>
    <string name="view">view</string>
    <string name="current_roadworks">Current Roadworks</string>
    <string name="current_roadworks_desc">Roadworks currently being undertaken on the road network</string>
    <string name="planned_roadworks">Planned Roadworks</string>
    <string name="planned_roadworks_desc">Future planned roadworks on the road network</string>
    <string name="loading">Loading…</string>
    <string name="sample_card_description">Sample Card Description</string>
    <string name="sample_card_title">Sample Card Title</string>
    <string name="search">Search</string>
    <string name="sample_publish_date">Sample Publish Date</string>
    <string name="rating">rating</string>
    <string name="published_label">Published on&#160;</string>
    <string name="happy_face">happy face</string>
    <string name="no_issues_here">No issues here</string>
    <string name="date">Date</string>
</resources>
